--- a/bio.html
+++ b/bio.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li> <a href="accueil.html"> Accueil </a> </li>
+            <li> <a href="index.html"> Accueil </a> </li>
             <li> <a href="Actualite.html"> Actualités </a> </li>
             <li> <a href="bio.html" class="active"> Biographie </a> </li>
             <li> <a href="photos.html"> Album photo </a> </li>
